Fix form data user layout responsive gap and width

--- a/src/components/Form/styles.css
+++ b/src/components/Form/styles.css
@@ -43,8 +43,7 @@ input::placeholder {
   align-items: center;
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
-  gap: 20px;
+  gap: 10px;
   justify-content: space-around;
 }
 
